--- a/src/index.html
+++ b/src/index.html
@@ -14,16 +14,18 @@
   </head>
   <body>
     <div class="container-fluid text-center">
-      <h1 class="mt-5">Hello Rigo!</h1>
-      <img src="./rigo-baby.jpg" />
-      <p class="alert alert-warning mt-4">
-        If this text is <b>not</b> centered and <b>yellow</b>, you probably have
-        an error
-      </p>
-      <div class="fixed-bottom p-4">
+      <div class="card">
+        <span class="top-suit">♠</span>
+        <span class="number">7</span>
+        <span class="bottom-suit">♠</span>
+      </div>
+      <div>
         Made with ❤️ by
-        <a href="https://www.4geeksacademy.com">4Geeks Academy</a>
+        <a href="https://www.4geeksacademy.com"
+          >4Geeks & Me! <i class="fas fa-seedling" style="color: #5b3dae;"></i
+        ></a>
       </div>
     </div>
+    <!-- <script type="text/javascript" src=""bundle/bundle.js></script> -->
   </body>
 </html>
