trying it once again

--- a/src/index.html
+++ b/src/index.html
@@ -15,9 +15,9 @@
   <body>
     <div class="container-fluid text-center">
       <div class="card">
-        <span class="top-suit">♠</span>
-        <span class="number">7</span>
-        <span class="bottom-suit">♠</span>
+        <!-- <span class="top-suit">♠</span> -->
+        <span className="number"></span>
+        <!-- <span class="bottom-suit">♠</span> -->
       </div>
       <div>
         Made with ❤️ by
